--- a/vscode.sh/extensions.json
+++ b/vscode.sh/extensions.json
@@ -20,7 +20,7 @@
     "ritwickdey.LiveServer",
     "SimonSiefke.svg-preview",
     "styled-components.vscode-styled-components",
-    "WakaTime.vscode-wakatime",
+    "rocketseat.theme-omni",
     "WallabyJs.console-ninja",
     "withfig.fig",
     "wix.vscode-import-cost",
