--- a/vscode.sh/settings.json
+++ b/vscode.sh/settings.json
@@ -104,7 +104,7 @@
     "markdown": false
   },
   "workbench.productIconTheme": "fluent-icons",
-  "workbench.colorTheme": "Catppuccin Mocha",
+  "workbench.colorTheme": "Omni",
   "vscode-pets.petType": "cat",
   "vscode-pets.petColor": "white",
   "vscode-pets.petSize": "medium",
