--- a/settings.json
+++ b/settings.json
@@ -1,161 +1,80 @@
 {
-  "settings": {
-    "editor.formatOnSave": true,
-    "explorer.compactFolders": false,
-    "workbench.iconTheme": "symbols",
-    "editor.inlayHints.fontFamily": "Victor Mono",
-    "editor.fontFamily": "Victor Mono",
-    "editor.fontLigatures": true,
+    "settings": {
     "editor.fontSize": 14,
-    "editor.lineHeight": 24,
-    "terminal.integrated.fontFamily": "MesloLGM Nerd Font",
-    "terminal.integrated.fontSize": 14,
-    "editor.rulers": [
-      120
-    ],
-    "editor.wordWrap": "bounded",
-    "workbench.tree.indent": 15,
-    "workbench.tree.renderIndentGuides": "always",
-    "javascript.updateImportsOnFileMove.enabled": "never",
-    "editor.bracketPairColorization.enabled": true,
-    "breadcrumbs.enabled": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true
-    },
-    "editor.renderLineHighlight": "gutter",
+    "editor.lineHeight": 1.8,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
     "editor.tabSize": 2,
-    "emmet.syntaxProfiles": {
-      "javascript": "jsx"
-    },
-    "emmet.includeLanguages": {
-      "javascript": "javascriptreact",
-      "njk": "html"
-    },
-    "editor.parameterHints.enabled": false,
-    "explorer.confirmDragAndDrop": false,
-    "explorer.confirmDelete": false,
-    "liveServer.settings.donotShowInfoMsg": true,
-    "editor.mouseWheelZoom": true,
-    "liveServer.settings.donotVerifyTags": true,
-    "gitlens.views.repositories.branches.layout": "list",
-    "[javasacript]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "security.workspace.trust.untrustedFiles": "open",
-    "[typescriptreact]": {
-      "editor.defaultFormatter": "vscode.typescript-language-features"
-    },
-    "json.schemas": [
-      {
-        "name": "vscode-expo-manifest",
-        "url": "file:///Users/birobirobiro/Library/Application%20Support/Code/User/globalStorage/bycedric.vscode-expo/manifest-45.0.0.json",
-        "fileMatch": [
-          "app.json",
-          "app.config.json"
-        ]
-      }
-    ],
+    "editor.fontFamily": "JetBrains Mono",
+    "editor.fontLigatures": true,
+    "editor.semanticHighlighting.enabled": false,
+    "editor.hideCursorInOverviewRuler": true,
+    "editor.minimap.enabled": true,
+    "editor.scrollbar.vertical": "hidden",
+    "editor.stickyScroll.enabled": false,
+    "files.encoding": "utf8",
+
+    "workbench.iconTheme": "eq-material-theme-icons-deepforest",
+    "workbench.editor.labelFormat": "short",
+
+    "javascript.suggest.autoImports": true,
+    "javascript.updateImportsOnFileMove.enabled": "always",
     "[typescript]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    "editor.inlineSuggest.enabled": true,
-    "[javascript]": {
-      "editor.defaultFormatter": "vscode.typescript-language-features"
+    "apc.font.family": "JetBrains Mono",
+    "explorer.confirmDelete": false,
+    "explorer.confirmDragAndDrop": false,
+    "explorer.compactFolders": false,
+    "explorer.fileNesting.enabled": true,
+    "terminal.integrated.fontSize": 14,
+    "terminal.integrated.fontFamily": "JetBrains Mono",
+    "terminal.integrated.shell.osx": "/bin/zsh",
+
+    "window.titleBarStyle": "custom",
+    "update.mode": "default",
+    "window.zoomLevel": 1,
+
+    "[prisma]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "Prisma.prisma"
     },
-    "[json]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "diffEditor.ignoreTrimWhitespace": false,
-    "terminal.integrated.env.osx": {
-      "FIG_NEW_SESSION": "1"
-    },
-    "livePreview.notifyOnOpenLooseFile": false,
-    "editor.accessibilitySupport": "off",
-    "[css]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[html]": {
-      "editor.defaultFormatter": "vscode.html-language-features"
-    },
-    "[javascriptreact]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "settingsSync.ignoredSettings": [],
     "tabnine.experimentalAutoImports": true,
-    "symbols.hidesExplorerArrows": false,
-    "react-native-tools.showUserTips": false,
-    "terminal.integrated.gpuAcceleration": "off",
-    "github.copilot.enable": {
-      "*": true,
-      "yaml": false,
-      "plaintext": false,
-      "markdown": false
+    "files.associations": {
+        ".env.*": "dotenv",
+        ".prettierrc": "json",
+        "*.css": "css"
     },
-    "workbench.productIconTheme": "fluent-icons",
-    "workbench.colorTheme": "Omni",
-    "vscode-pets.petType": "cat",
-    "vscode-pets.petColor": "white",
-    "vscode-pets.petSize": "medium",
-    "vscode-pets.position": "explorer"
-  },
-  "extensions": [
-    "andys8.jest-snippets",
-    "apollographql.vscode-apollo",
-    "bradlc.vscode-tailwindcss",
-    "christian-kohler.path-intellisense",
-    "ckolkman.vscode-postgres",
-    "clinyong.vscode-css-modules",
-    "codeium.codeium",
-    "dbaeumer.vscode-eslint",
-    "donjayamanne.githistory",
-    "eamodio.gitlens",
-    "editorconfig.editorconfig",
-    "eg2.vscode-npm-script",
-    "enkia.tokyo-night",
-    "esbenp.prettier-vscode",
-    "figma.figma-vscode-extension",
-    "flowtype.flow-for-vscode",
-    "formulahendry.auto-close-tag",
-    "formulahendry.auto-rename-tag",
-    "formulahendry.docker-explorer",
-    "foxundermoon.shell-format",
-    "github.copilot",
-    "github.copilot-chat",
-    "golang.go",
-    "humao.rest-client",
-    "kumar-harsh.graphql-for-vscode",
-    "miguelsolorio.fluent-icons",
-    "miguelsolorio.symbols",
-    "mikael.angular-beastcode",
-    "mikestead.dotenv",
-    "mrmlnc.vscode-duplicate",
-    "ms-azuretools.vscode-docker",
-    "ms-python.debugpy",
-    "ms-python.python",
-    "ms-python.vscode-pylance",
-    "ms-vscode.live-server",
-    "ms-vscode.vscode-typescript-next",
-    "ms-vsliveshare.vsliveshare",
-    "naumovs.color-highlight",
-    "nucllear.vscode-extension-auto-import",
-    "octref.vetur",
-    "patbenatar.advanced-new-file",
-    "pflannery.vscode-versionlens",
-    "prisma.prisma",
-    "prisma.prisma-insider",
-    "pulkitgangwar.nextjs-snippets",
-    "rangav.vscode-thunder-client",
-    "ritwickdey.liveserver",
-    "rocketseat.theme-omni",
-    "simonsiefke.svg-preview",
-    "skyran.js-jsx-snippets",
-    "styled-components.vscode-styled-components",
-    "usernamehw.errorlens",
-    "visualstudioexptteam.intellicode-api-usage-examples",
-    "visualstudioexptteam.vscodeintellicode",
-    "vscode-icons-team.vscode-icons",
-    "wallabyjs.console-ninja",
-    "wix.vscode-import-cost",
-    "yoavbls.pretty-ts-errors"
-  ]
+    "npm.keybindingsChangedWarningShown": true,
+    "security.allowedUNCHosts": ["wsl.localhost"],
+    "files.autoSave": "afterDelay",
+    "breadcrumbs.enabled": false,
+    "workbench.colorTheme": "Min Dark",
+
+    "workbench.startupEditor": "newUntitledFile",
+    "workbench.list.smoothScrolling": true,
+    "workbench.editor.empty.hint": "hidden",
+    "workbench.editor.editorActionsLocation": "default",
+
+    "symbols.hidesExplorerArrows": true,
+    "autoimport.showNotifications": false,
+    "prettier.trailingComma": "all",
+    "github.copilot.enable": {
+        "*": true,
+        "plaintext": false,
+        "markdown": true,
+        "scminput": false
+    },
+    "git.suggestSmartCommit": false,
+    "workbench.editor.enablePreview": false,
+    "window.density.editorTabHeight": "compact",
+    "workbench.statusBar.visible": false,
+    "workbench.activityBar.location": "hidden",
+    "window.commandCenter": false,
+    "typescript.updateImportsOnFileMove.enabled": "always"
+    },
+    "extensions": [
+      "andys8.jest-snippets"
+    ]
 }
