--- a/settings.json
+++ b/settings.json
@@ -74,7 +74,64 @@
     "window.commandCenter": false,
     "typescript.updateImportsOnFileMove.enabled": "always"
     },
-    "extensions": [
-      "andys8.jest-snippets"
-    ]
+extensions: [
+  "andys8.jest-snippets",
+  "apollographql.vscode-apollo",
+  "bradlc.vscode-tailwindcss",
+  "christian-kohler.path-intellisense",
+  "ckolkman.vscode-postgres",
+  "clinyong.vscode-css-modules",
+  "codeium.codeium",
+  "dbaeumer.vscode-eslint",
+  "donjayamanne.githistory",
+  "eamodio.gitlens",
+  "editorconfig.editorconfig",
+  "eg2.vscode-npm-script",
+  "enkia.tokyo-night",
+  "esbenp.prettier-vscode",
+  "figma.figma-vscode-extension",
+  "flowtype.flow-for-vscode",
+  "formulahendry.auto-close-tag",
+  "formulahendry.auto-rename-tag",
+  "formulahendry.docker-explorer",
+  "foxundermoon.shell-format",
+  "github.copilot",
+  "github.copilot-chat",
+  "golang.go",
+  "humao.rest-client",
+  "kumar-harsh.graphql-for-vscode",
+  "miguelsolorio.fluent-icons",
+  "miguelsolorio.symbols",
+  "mikael.angular-beastcode",
+  "mikestead.dotenv",
+  "mrmlnc.vscode-duplicate",
+  "ms-azuretools.vscode-docker",
+  "ms-python.debugpy",
+  "ms-python.python",
+  "ms-python.vscode-pylance",
+  "ms-vscode.live-server",
+  "ms-vscode.vscode-typescript-next",
+  "ms-vsliveshare.vsliveshare",
+  "naumovs.color-highlight",
+  "nucllear.vscode-extension-auto-import",
+  "octref.vetur",
+  "patbenatar.advanced-new-file",
+  "pflannery.vscode-versionlens",
+  "prisma.prisma",
+  "prisma.prisma-insider",
+  "pulkitgangwar.nextjs-snippets",
+  "rangav.vscode-thunder-client",
+  "ritwickdey.liveserver",
+  "rocketseat.theme-omni",
+  "simonsiefke.svg-preview",
+  "skyran.js-jsx-snippets",
+  "styled-components.vscode-styled-components",
+  "usernamehw.errorlens",
+  "visualstudioexptteam.intellicode-api-usage-examples",
+  "visualstudioexptteam.vscodeintellicode",
+  "vscode-icons-team.vscode-icons",
+  "wallabyjs.console-ninja",
+  "wix.vscode-import-cost",
+  "yoavbls.pretty-ts-errors"
+]
 }
